--- a/kadai-html.html
+++ b/kadai-html.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML/CSSでWebページ作成</title>
+    <link rel="stylesheet" href="kadai-css.css">
   </head>
   
   <body>
     <header>
-      <p>ここはヘッダーです。</p>
+      ここはヘッダーです。
     </header>
     <div id="wrapper">
       <div id="main">
@@ -34,7 +35,7 @@
       </nav>
     </div>
     <footer>
-      <p>ここはフッターです。</p>
+      ここはフッターです。
     </footer>
   </body>
 </html>
